# trad

./: .env  .gitignore  README.md  alembic.ini  data.py  docker-compose.yml  main.py  makefile  pyproject.toml  test_hello.tavern.yaml
auth/: auth.py  database.py  manager.py  schemas.py
migrations/: env.py
migrations/versions/: 04630c38ba53_db_creation.py  151599a9cee2_db_creation.py  2_2c20aed5f9e3_add_operations.py  3cd730a995ec_add_messages_table.py
models/: __init__.py  models.py  tables.py
src/: config.py  database.py  main.py
src/auth/: base_config.py  manager.py  models.py
src/chat/: models.py  router.py
src/operations/: models.py  router.py
src/pages/: router.py
src/tasks/: router.py  tasks.py
src/templates/: base.html  chat.html  search.html
tests/: conftest.py  test_auth.py  test_operations.py
tests/tavern/: conftest.py  test_gpt_get_trades.tavern.yaml  test_gpt_get_user.tavern.yaml  test_gpt_hello.tavern.yaml  test_gpt_post_trades.tavern.yaml  test_gpt_post_user.tavern.yaml
