[tool.poetry]
name = "trad"
version = "0.1.0"
description = ""
authors = ["alexe0110"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.95.0"
pydantic = "^1.10.7"
uvicorn = "^0.21.1"
redis = "^4.5.4"
sqlalchemy = "^2.0.11"
alembic = "^1.10.4"
psycopg2-binary = "^2.9.6"
python-dotenv = "^1.0.0"
asyncpg = "^0.27.0"
fastapi-users = {extras = ["sqlalchemy"], version = "^11.0.0"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
